--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "devDependencies": {
     "bower": "~1.3.12",
     "grunt": "~0.4.4",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-purescript": "~0.5.0",
     "grunt-execute": "~0.1.5"
   },
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "test": "grunt"
   }
 }
